test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/union_type_shadows_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: u
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: u
                  Bool: 1
                  List[0]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: my_union
                  None: 
                  Structure: 
                    TIdentifier: u
                    Bool: 1
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
